uses actual images for give page. fixes the faq alignment issue on deployment. moves images to public

--- a/src/components/Give/style.css
+++ b/src/components/Give/style.css
@@ -7,8 +7,20 @@
   padding: 20px !important;
 }
 
+.center-text {
+  text-align: center;
+}
+
+.card-body button {
+  margin-left: 25%;
+}
+
 .token-card {
   margin-top: 1%;
+}
+
+.token-card .card {
+  min-height: 500px;
 }
 
 .card-description-text {
