--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -37,7 +37,6 @@
 }
 
 .faq-section {
-  padding-left: 18%;
   font-size: 14px;
 }
 
